# Detection

./: .gitignore  CMakeLists.txt  README.md
include/: detection.hpp  trtdetection.hpp  tspdetection.hpp  utils.h  utils.hpp
src/: main.cpp
